vlib/v/checker/tests/unknown_function.vv
import math

fn main() {
	println(math.max_i64())
}
